--- a/1.html
+++ b/1.html
@@ -14,9 +14,35 @@
 </ol>
 
 <h2> Je suis Mindy 민지코딩 </h2>
+<p>
+  "<iframe width="560" height="315" src="https://www.youtube.com/embed/p_v_js0mxVc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"
+</p>
+
 <h3> HTML </h3>
 <a href ="https://www.naver.com/" target="-blank" title="naver">Bonjour mindy je suis etidant habite en coree.</a> J'ai <strong>un petit ami <u>francais</u> </strong> <br> <br><br>
 <img src = "french.jpg" width = "50%">
 <p style="margin-top:40px">Tous les jours J'ai etudie le francais. Et je veux parler le francais tres bien avec la famille de mon petit ami </p>
 </body>
+
+<p>
+<div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web1-hvpafmxe5j.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
 </html>
