--- a/1.html
+++ b/1.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html>
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GK2GS9R5D8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GK2GS9R5D8');
+</script>
+  
 <title> WEB1 - html</title>
 <meta charset ="utf-8">
 </head>
